Added comment to main.tf to test GitHub Actions

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,7 +1,7 @@
 name: Infrastructure
 
 on:
-  workflow_dispatch:   # This allow manual run
+  workflow_dispatch:   # This allows manual run
   push:
     branches:
       - main
