--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -47,10 +47,10 @@ jobs:
 
     - name: Terraform Plan
       working-directory: terraform
-      run: terraform plan
+      run: terraform plan -out=tfplan # Saves the plan to a file
 
     # OPTIONAL — only run manually!
     # - name: Terraform Apply
     #   if: github.event_name == 'workflow_dispatch'
     #   working-directory: terraform
-    #   run: terraform apply -auto-approve
+    #   run: terraform apply tfplan -auto-approve
