--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -53,4 +53,4 @@ jobs:
     # - name: Terraform Apply
     #   if: github.event_name == 'workflow_dispatch'
     #   working-directory: terraform
-    #   run: terraform apply tfplan -auto-approve
+    #   run: terraform apply "tfplan" -auto-approve
