--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -45,6 +45,10 @@ jobs:
       working-directory: terraform
       run: terraform validate
 
+    - name: Terraform Import
+      working-directory: terraform
+      run: terraform import aws_security_group.ec2_sg sg-089991365eb05aae8
+
     - name: Terraform Plan
       working-directory: terraform
       run: terraform plan -out=tfplan # Saves the plan to a file
