--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -55,7 +55,8 @@ jobs:
     #   working-directory: terraform
     #   run: terraform apply "tfplan" -auto-approve
     
-    - name: Terraform Output
-      working-directory: terraform
-      run: terraform output -json ec2_private_ips | jq -r '.[]' > inventory.ini # Saves EC2 IPs to a file
+    # Must be run after terraform apply
+    # - name: Terraform Output
+    #  working-directory: terraform
+    #  run: terraform output -json ec2_private_ips | jq -r '.[]' > inventory.ini # Saves EC2 IPs to a file
 
