--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Terraform Apply
       if: github.event_name == 'workflow_dispatch'
       working-directory: terraform
-      run: terraform apply "tfplan" -auto-approve
+      run: terraform apply -auto-approve tfplan
     
     # Must be run after terraform apply
     - name: Terraform Output
