--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -37,6 +37,10 @@ jobs:
       working-directory: terraform
       run: terraform init
 
+    - name: Terraform Force Unlock
+      working-directory: terraform
+      run: terraform force-unlock 2b1d4c9c-7af7-3e73-4a37-e9ee4d4021a1
+
     - name: Terraform Format
       working-directory: terraform
       run: terraform fmt -check
