--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -62,3 +62,8 @@ jobs:
       if: github.event_name == 'workflow_dispatch'
       working-directory: terraform
       run: terraform apply -auto-approve tfplan
+
+    - name: Export Terraform output
+      if: github.event_name == 'workflow_dispatch'
+      working-directory: terraform
+      run: terraform output -json > tf_outputs.json
