--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -68,7 +68,15 @@ jobs:
       working-directory: terraform
       run: terraform output -json > tf.json
 
+    - name: Upload outputs
+      if: github.event_name == 'workflow_dispatch'
+      uses: actions/upload-artifact@v4
+      with:
+        name: tf
+        path: tf.json
+
   kubespray:
+    if: github.event_name == 'workflow_dispatch'
     needs: infra
     runs-on: [self-hosted, kubespray-runner]
     steps:
