--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -51,6 +51,8 @@ jobs:
 
     - name: Terraform Plan
       working-directory: terraform
+      env:
+        TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
       run: terraform plan -out=tfplan # Saves the plan to a file
     
 #    - name: Terraform Destroy
