--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -55,11 +55,11 @@ jobs:
         TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
       run: terraform plan -out=tfplan # Saves the plan to a file
     
-#    - name: Terraform Destroy
-#      working-directory: terraform
-#      env:
-#        TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
-#      run: terraform destroy -auto-approve # Destroys created resources
+    - name: Terraform Destroy
+      working-directory: terraform
+      env:
+        TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
+      run: terraform destroy -auto-approve # Destroys created resources
 
 #     OPTIONAL — only run manually!
     - name: Terraform Apply
