--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -37,9 +37,9 @@ jobs:
       working-directory: terraform
       run: terraform init
 
-#    - name: Terraform Force Unlock
-#      working-directory: terraform
-#      run: terraform force-unlock -force e8f11b4e-fa1a-52bc-89d4-69e0adacaf71
+    - name: Terraform Force Unlock
+      working-directory: terraform
+      run: terraform force-unlock -force e8f11b4e-fa1a-52bc-89d4-69e0adacaf71
 
     - name: Terraform Format
       working-directory: terraform
@@ -65,11 +65,15 @@ jobs:
     - name: Terraform Apply
       if: github.event_name == 'workflow_dispatch'
       working-directory: terraform
+      env:
+        TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
       run: terraform apply -auto-approve
 
     - name: Export Terraform output
       if: github.event_name == 'workflow_dispatch'
       working-directory: terraform
+      env:
+        TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
       run: terraform output -json > tf.json
 
     - name: Upload outputs
