--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -79,6 +79,7 @@ jobs:
     - name: Upload outputs
       if: github.event_name == 'workflow_dispatch'
       uses: actions/upload-artifact@v4
+      working-directory: terraform
       with:
         name: tf
         path: tf.json
