calico,argo,nodes working (removed large binaries)

--- a/setup-kubeconfig.yml
+++ b/setup-kubeconfig.yml
@@ -20,6 +20,9 @@
         group: ubuntu
         mode: '0600'
 
+    - name: Explicitly set ownership of kubeconfig (safety net)
+      shell: "chown ubuntu:ubuntu /home/ubuntu/.kube/config"
+
     - name: Verify kubeconfig is working
       command: kubectl get nodes
       become: yes
