fix: CRITICAL - comment out terraform destroy to prevent accidental infrastructure deletion
- terraform destroy was running on EVERY push - this would destroy all infra!
- Now only plan runs on push, apply only on manual dispatch
- destroy must be manually uncommented for intentional teardown

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -53,15 +53,17 @@ jobs:
       working-directory: terraform
       env:
         TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
-      run: terraform plan -out=tfplan # Saves the plan to a file
+      run: terraform plan -out=tfplan
     
-    - name: Terraform Destroy
-      working-directory: terraform
-      env:
-        TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
-      run: terraform destroy -auto-approve # Destroys created resources
+    # WARNING: terraform destroy is COMMENTED OUT for safety
+    # Uncomment only for intentional teardown
+    # - name: Terraform Destroy
+    #   working-directory: terraform
+    #   env:
+    #     TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
+    #   run: terraform destroy -auto-approve
 
-#     OPTIONAL — only run manually!
+    # Apply only on manual workflow dispatch
     - name: Terraform Apply
       if: github.event_name == 'workflow_dispatch'
       working-directory: terraform
