revert: restore original infra.yml - changes made without discussion

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -53,17 +53,15 @@ jobs:
       working-directory: terraform
       env:
         TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
-      run: terraform plan -out=tfplan
+      run: terraform plan -out=tfplan # Saves the plan to a file
     
-    # WARNING: terraform destroy is COMMENTED OUT for safety
-    # Uncomment only for intentional teardown
-    # - name: Terraform Destroy
-    #   working-directory: terraform
-    #   env:
-    #     TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
-    #   run: terraform destroy -auto-approve
+    - name: Terraform Destroy
+      working-directory: terraform
+      env:
+        TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
+      run: terraform destroy -auto-approve # Destroys created resources
 
-    # Apply only on manual workflow dispatch
+#     OPTIONAL — only run manually!
     - name: Terraform Apply
       if: github.event_name == 'workflow_dispatch'
       working-directory: terraform
