--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -40,7 +40,7 @@ jobs:
       working-directory: terraform
       run: |
         terraform init \
-          -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" 
+          -backend-config="bucket=${{ secrets.BUCKET_NAME }}" 
 
 #    - name: Terraform Force Unlock
 #      working-directory: terraform
