--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -58,11 +58,11 @@ jobs:
       working-directory: terraform
       run: terraform plan -out=tfplan # Saves the plan to a file
     
-#    - name: Terraform Destroy
-#      working-directory: terraform
-#      env:
-#        TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
-#      run: terraform destroy -auto-approve # Destroys created resources
+    - name: Terraform Destroy
+      working-directory: terraform
+      env:
+        TF_VAR_runner_token: ${{ secrets.RUNNER_TOKEN }}
+      run: terraform destroy -auto-approve # Destroys created resources
 
 #     OPTIONAL — only run manually!
     - name: Terraform Apply
@@ -114,4 +114,5 @@ jobs:
             --become --become-user=root \
 
             cluster.yml
+
 
