Added terraform setup to workflow

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -58,9 +58,9 @@ jobs:
       working-directory: terraform
       run: terraform plan -out=tfplan # Saves the plan to a file
     
-    - name: Terraform Destroy
-      working-directory: terraform
-      run: terraform destroy -auto-approve # Destroys created resources
+#    - name: Terraform Destroy
+#      working-directory: terraform
+#      run: terraform destroy -auto-approve # Destroys created resources
 
 #     OPTIONAL — only run manually!
     - name: Terraform Apply
@@ -80,6 +80,9 @@ jobs:
     runs-on: [self-hosted, kubespray-runner]
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
