--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -76,7 +76,7 @@ jobs:
     - name: Generate inventory
       working-directory: terraform
       run: |
-        ASG_NAME=$(cd terraform && terraform output -raw asg_name)
+        ASG_NAME=$(terraform output -raw asg_name)
         bash generate_inventory.sh salon-app "$ASG_NAME" 4
     
     - name: Upload inventory
