--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -76,12 +76,13 @@ jobs:
     - name: Debug ASG name
       working-directory: terraform
       run: |
-        terraform output -raw asg_name
-        
+        ASG_NAME=$(terraform output -raw asg_name | tr -d '\r\n')
+        echo "ASG_NAME=$ASG_NAME"
+
     - name: Generate inventory
       working-directory: terraform
       run: |
-        ASG_NAME=$(terraform output -raw asg_name)
+        ASG_NAME=$(terraform output -raw asg_name | tr -d '\r\n')
         bash generate_inventory.sh salon-app "$ASG_NAME" 4
     
     - name: Upload inventory
