--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -76,8 +76,9 @@ jobs:
     - name: Debug ASG name
       working-directory: terraform
       run: |
-        ASG_NAME=$(terraform output asg_name)
+        ASG_NAME=$(terraform output -json asg_name | jq -r '.')
         echo "ASG_NAME=$ASG_NAME"
+
 
     - name: Generate inventory
       working-directory: terraform
