--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -74,19 +74,21 @@ jobs:
       run: terraform output -json > tf.json
 
     - name: Debug ASG name
+      if: github.event_name == 'workflow_dispatch'
       working-directory: terraform
       run: |
         ASG_NAME=$(terraform output -json asg_name | jq -r '.')
         echo "ASG_NAME=$ASG_NAME"
 
-
     - name: Generate inventory
+      if: github.event_name == 'workflow_dispatch'
       working-directory: terraform
       run: |
         ASG_NAME=$(terraform output asg_name)
         bash generate_inventory.sh salon-app "$ASG_NAME" 4
     
     - name: Upload inventory
+      if: github.event_name == 'workflow_dispatch'
       uses: actions/upload-artifact@v4
       with:
         name: kubespray-inventory
