--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -77,7 +77,8 @@ jobs:
       id: asg
       working-directory: terraform
       run: |
-        echo "asg_name=$(terraform output -raw asg_name)" >> $GITHUB_ENV
+        ASG_NAME=$(terraform output -raw asg_name 2>/dev/null)
+        echo "ASG_NAME=${ASG_NAME}" >> $GITHUB_ENV
 
     - name: Generate inventory
       if: github.event_name == 'workflow_dispatch'
